feat: integrate Sub-Store
